# django-telegram-objects

./: .gitignore  .pre-commit-config.yaml  HISTORY.rst  LICENSE.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
requirements/: compile.py  py310-django32.txt  py310-django40.txt  py310-django41.txt  py311-django41.txt  py37-django32.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  requirements.in
src/telegram_objects/: admin.py  api.py  help_text.py  models.py
src/telegram_objects/management/commands/: get_updates.py
src/telegram_objects/migrations/: 0001_initial.py  0002_alter_chat_telegram_id_alter_user_telegram_id.py  0003_chat_all_members_are_administrators.py  0004_chatmember_user.py  0005_remove_chatmember_user.py  0006_alter_chatmemberupdated_new_chat_member_and_more.py  0007_message_new_chat_participant.py  0008_message_new_chat_member.py  0009_message_left_chat_participant.py
tests/proj/: settings.py
