[metadata]
name = django-telegram-objects
version = 0.0.2
description = django-telegram-objects is a Django application that creates Telegram objects of a bot in a Postgres Database.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Rami Boutassghount
author_email = ramiboutas@protonmail.com
maintainer = Rami Boutassghount
maintainer_email = ramiboutas@protonmail.com
url = https://github.com/ramiboutas/django-telegram-objects
project_urls =
    Changelog = https://github.com/ramiboutas/django-telegram-objects/blob/master/HISTORY.rst
    Twitter = https://twitter.com/ramiboutas
license = MIT License
keywords =
    django
    telegram
    telegram-bot
    bot
    postgres
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=3.2
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    telegram_objects
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 119
extend-ignore = E203
